<resources>
    <string name="app_name">I Hotel</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Full Name</string>
    <string name="nav_header_subtitle">email@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <!-- Menu -->
    <string name="menu_home">Home</string>
    <string name="menu_booking">Booking</string>
    <string name="menu_rentcheckout">Room services</string>
    <string name="menu_money_management">Other revenue and expenses</string>
    <string name="menu_statistic">Statistics</string>
    <string name="menu_system_management">System management</string>
    <string name="menu_account">Change password</string>
    <string name="log_out">Logout</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!-- System managment -->
    <string name="room_type">Room type</string>
    <string name="caculate_money">Price rule</string>
    <string name="room">Room</string>
    <string name="menu">Menu</string>
    <string name="customer">Customer</string>
    <string name="history">History</string>
    <string name="statistic">Statistic</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>