<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.hotelmangementproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.example.hotelmangementproject.ui.booking.BookingFragment"
        android:label="@string/menu_booking"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/nav_rentcheckout"
        android:name="com.example.hotelmangementproject.ui.rentcheckout.RentCheckoutFragment"
        android:label="@string/menu_rentcheckout"
        tools:layout="@layout/fragment_rentcheckout" />
    <fragment
        android:id="@+id/nav_money_management"
        android:name="com.example.hotelmangementproject.ui.moneymanagement.MoneyManagementFragment"
        android:label="@string/menu_money_management"
        tools:layout="@layout/fragment_money_management"
        />
    <fragment
        android:id="@+id/nav_system_management"
        android:name="com.example.hotelmangementproject.ui.systemmanagement.SystemManagementFragment"
        android:label="@string/menu_system_management"
        tools:layout="@layout/fragment_system_management"
        />
    <fragment
        android:id="@+id/nav_statistic"
        android:name="com.example.hotelmangementproject.ui.statistic.StatisticFragment"
        android:label="@string/menu_statistic"
        tools:layout="@layout/fragment_statistic"
        />
    <fragment
        android:id="@+id/nav_account"
        android:name="com.example.hotelmangementproject.ui.account.AccountFragment"
        android:label="@string/menu_account"
        tools:layout="@layout/fragment_account"
        />
</navigation>